# tracked_rc_robot

./: .gitignore  .gitmodules  33gb-520-18.7_calcs.txt  README.md  dabble_gamepad_packet_format.txt
circuit/: stripboard.diy
circuit/kicad_project/: robot_power_and_logic.kicad_pcb  robot_power_and_logic.kicad_pro  robot_power_and_logic.kicad_sch
code/: main.py
code/cpp/: CMakeLists.txt  dabble.cpp  dabble.h  main.c  main.cpp  track.cpp  track.h
code/micropython/: main.py
kicad_project/: robot_power_and_logic.kicad_pro  robot_power_and_logic.kicad_sch
